--- a/Bootstrap-project-main/index.html
+++ b/Bootstrap-project-main/index.html
@@ -278,7 +278,7 @@
 
 	<!-- Start Socket -->
 	<div class="socket text-light text-center py-3">
-		<p>&copy; <a href="" target="_blank">Stefinthomas.com</a></p>
+		<p>&copy; <a href="" target="_blank">IrinePercy.com</a></p>
 	</div>
 
 	<!-- End Socket -->
